@@ -919,7 +919,6 @@ ROW   |10043    |{10208}>0                         |Hostname was changed on {HOS
 ROW   |10044    |{10207}>0                         |Host information was changed on {HOST.NAME}                         |    |0     |1       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |10190    |{10233}>300                       |Too many processes on {HOST.NAME}                                   |    |0     |2       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |13000    |{12144}<20M                       |Lack of available memory on server {HOST.NAME}                      |    |0     |3       |                                                                                                                                      |NULL      |0   |0    |
-ROW   |13010    |0                                 |WEB (HTTP) server is down on {HOST.NAME}                            |    |0     |3       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |13015    |{12641}<25                        |Less than 25% free in the configuration cache                       |    |0     |3       |Consider increasing CacheSize in the zabbix_server.conf configuration file                                                            |NULL      |0   |0    |
 ROW   |13017    |{12651}<25                        |Less than 25% free in the text history cache                        |    |0     |3       |                                                                                                                                      |NULL      |0   |0    |
 ROW   |13019    |{12649}<25                        |Less than 25% free in the trends cache                              |    |0     |3       |                                                                                                                                      |NULL      |0   |0    |
